[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["sollimann <kristoffer.solberg@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
